--- a/css/general_foundicons.css
+++ b/css/general_foundicons.css
@@ -42,6 +42,14 @@
   content: "\f02d"; /* smiley */
 }
 
+.foundicon-ok:before {
+  content: "\f005"; /* checkmark */
+}
+
+.foundicon-close:before {
+  content: "\f006"; /* remove */
+}
+
 /* icons */
 .foundicon-settings:before {
   content: "\f000";
