--- a/css/atmos.css
+++ b/css/atmos.css
@@ -140,7 +140,7 @@ html, body {
 	height: 100%;
 	font-size: 0;
 	white-space: nowrap;
-	overflow-x: auto;
+	overflow-x: hidden;
 }
 
 .timeline {
@@ -170,9 +170,9 @@ html, body {
 
 .timeline-items-wrapper {
 	position: relative;
-	width: 320px;
+	width: 100%;
 	height: 100%;
-	overflow-y: auto;
+	overflow-y: hidden;
 }
 
 .timeline-items {
@@ -193,7 +193,6 @@ html, body {
 
 .timeline-item {
 	padding: 4px;
-	padding-right: 28px;
 }
 
 .timeline-item-avator {
