--- a/css/theme.css
+++ b/css/theme.css
@@ -133,6 +133,18 @@
 	background-color: #1abc9c;
 }
 
+.timeline-item-message a {
+  text-decoration: underline;
+}
+
+.timeline-item-message a:link {
+	color: #0000C4;
+}
+
+.timeline-item-message a:hover {
+	color: #d5d5d5;
+}
+
 .palette-global-timeline-base-color {
 	/* BELIZE HOLE */
 	background-color: #2980b9;
