--- a/css/theme.css
+++ b/css/theme.css
@@ -40,12 +40,14 @@
 	background-color: #3692c9;
 }
 
-.atmos-modal-footer button:active {
+.atmos-modal-footer button:active,
+.atmos-modal-footer button:focus {
 	color: #fff;
 	background-color: #69c5fc;
 }
 
-.atmos-modal-footer button:active:before {
+.atmos-modal-footer button:active:before,
+.atmos-modal-footer button:focus:before {
 	color: #fff;
 }
 
@@ -131,6 +133,14 @@
 .timeline-row6 > .timeline-items-wrapper > .timeline-items > .timeline-item-wrapper:hover {
 	/* TURQUOISE */
 	background-color: #1abc9c;
+}
+
+.timeline-item-message a {
+	color: #ffffff;
+}
+
+.timeline-item-message a:hover {
+	color: #d5d5d5;
 }
 
 .palette-global-timeline-base-color {
