モーダル内の「OK」「CLOSE」ボタンにタブでフォーカスを当てた時にボタンが切り替わるように変更

--- a/css/theme.css
+++ b/css/theme.css
@@ -40,12 +40,14 @@
 	background-color: #3692c9;
 }
 
-.atmos-modal-footer button:active {
+.atmos-modal-footer button:active,
+.atmos-modal-footer button:focus {
 	color: #fff;
 	background-color: #69c5fc;
 }
 
-.atmos-modal-footer button:active:before {
+.atmos-modal-footer button:active:before,
+.atmos-modal-footer button:focus:before {
 	color: #fff;
 }
 
