--- a/css/theme.css
+++ b/css/theme.css
@@ -1,3 +1,7 @@
+.main-section {
+	background-color: #444444;
+}
+
 .atmos-modal-bg {
 	background-color: rgba(0,0,0,0.7);
 }
@@ -54,21 +58,33 @@
 	text-shadow: 0 0 1px rgba(111,134,134,0.3);
 }
 
-.timeline {
+.timeline,
+.conversation {
 	color: #ffffff;
 	border-color: #555555;
 }
 
-.timeline-header {
+.timeline-header,
+.conversation-header {
 	background-color: #555555;
 }
 
-.timeline-item-wrapper {
+.conversation-header > a {
+	color: #ffffff;
+}
+
+.timeline-item-wrapper,
+.conversation-item-wrapper {
 	border-color: #555555;
 }
 
-.timeline-item-header {
+.timeline-item-header,
+.conversation-item-header {
 	color: #cccccc;
+}
+
+.conversation-item-message {
+	color: #ffffff;
 }
 
 .reply-panel > a {
@@ -80,7 +96,8 @@
 }
 
 /* default */
-.timeline-item-wrapper {
+.timeline-item-wrapper,
+.conversation-item-wrapper {
 	background-color: #444444;
 }
 
@@ -88,10 +105,27 @@
 	background-color: #777777;
 }
 
-.timeline-items-wrapper {
+.timeline-items-wrapper,
+.conversation-items-wrapper {
 	background-color: #444444;
 }
 
+.conversation-item-footer > hr {
+	background-color: #415A74;
+}
+
+.conversation-items-wrapper {
+	background-color: #444444;
+}
+
+.conversation-items-wrapper > .conversation-items > .conversation-item-wrapper {
+	background-color: #415A74;
+}
+
+.conversation-items-wrapper > .conversation-items > .conversation-main.conversation-item-wrapper {
+	/* MIDNIGHT BLUE */
+	background-color: #2C3E50;
+}
 
 .timeline-row1 > .timeline-items-wrapper,
 .timeline-row3 > .timeline-items-wrapper,
