--- a/css/atmos.css
+++ b/css/atmos.css
@@ -307,6 +307,11 @@ html, body {
 	margin-right: 0.4em;
 }
 
+.timeline-item-address > span:hover,
+.conversation-item-address > span:hover {
+	cursor: pointer;
+}
+
 .timeline-item-message,
 .conversation-item-message {
 	white-space: pre-wrap;
